GH-47 fix(river-safari): set hero z-index

--- a/src/css/pages/case-study-river-safari.scss
+++ b/src/css/pages/case-study-river-safari.scss
@@ -25,6 +25,7 @@
 
 .hero {
   position: relative;
+  z-index: 2;
   width: 100%;
 
   img {
